--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -9652,11 +9652,12 @@ main {
 .cta-card .text-component {
   text-align: center;
   --text-vspace-multiplier: var(--vspace-lg);
+  display: grid;
+  justify-items: center;
 }
 
 .cta-card__title {
   max-width: 15ch;
-  margin: 0 auto;
 }
 
 .cta-card__text {
@@ -9679,6 +9680,7 @@ main {
   }
   .cta-card .text-component {
     text-align: left;
+    justify-items: start;
   }
 }
 
