--- a/main/assets/css/components/_design_card.scss
+++ b/main/assets/css/components/_design_card.scss
@@ -3,9 +3,12 @@
   background-repeat: no-repeat;
   background-position: right bottom 1.875rem;
   padding: 6.5625rem 1.5rem;
-  display: grid;
-  place-items: center;
-  --text-vspace-multiplier: 3;
+
+  .text-component {
+   display: grid;
+    place-items: center;
+    --text-vspace-multiplier: 3;
+  }
 
   p {
     text-align: center;
@@ -16,6 +19,9 @@
     background-position: right -10rem center;
     border-radius: var(--radius);
     padding: 4rem 1.5rem;
-     --text-vspace-multiplier: 1.5;
+
+    .text-component {
+       --text-vspace-multiplier: 1.5;
+    }
   }
 }
