label component section and labels for CTA and DESIGN cards

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -10024,6 +10024,7 @@ main {
   text-align: center;
   text-transform: uppercase;
   position: relative;
+  text-decoration: none;
 }
 
 .image-card::before {
