bold footer text only in sm size and up

--- a/main/assets/css/components/_footer.scss
+++ b/main/assets/css/components/_footer.scss
@@ -59,6 +59,12 @@
       grid-template-columns: repeat(3, 1fr);
       justify-items: start;
 
+      &__phone {
+        p {
+          font-weight: bold;
+        }
+      }
+
       &__social {
         place-self: end;
       }
