--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -9834,6 +9834,9 @@ main {
     grid-template-columns: repeat(3, 1fr);
     justify-items: start;
   }
+  .footer .contact__phone p {
+    font-weight: bold;
+  }
   .footer .contact__social {
     place-self: end;
   }
@@ -10024,7 +10027,6 @@ main {
   text-align: center;
   text-transform: uppercase;
   position: relative;
-  text-decoration: none;
 }
 
 .image-card::before {
